--- a/main.css
+++ b/main.css
@@ -1,9 +1,18 @@
 body {
-  background-color: #eee;
+  background-color: #000;
   height: 100%;
   padding:0;
   margin:0;
 /*  overflow: hidden;*/
+}
+
+.flipcard {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+  margin-top: 10px;
+  background: rgba(0,0,0,.6);
+  border-radius: 8px;
 }
 
 .flipcard.back {
@@ -27,22 +36,6 @@ body {
   -webkit-transform: rotateY(0);
 }
 
-
-.img {
-  width: 25%;
-  height: 20%;
-  background-size: cover;
-  float:left;
-}
-
-.bg {
-  height: 100%;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: -1;
-}
-
 .form-signin {
   position: relative;
   -webkit-perspective: 600px;
@@ -61,14 +54,6 @@ body {
 	font-style: italic;
 }
 
-.flipcard {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-  margin-top: 10px;
-  background: rgba(0,0,0,.6);
-  border-radius: 8px;
-}
 .form-signin input[type=text] {
 	width: 100%;
 }
