--- a/bg.styl
+++ b/bg.styl
@@ -12,7 +12,8 @@
 		float:left
 
 		&.off
-			opacity: .3
+			opacity: .6
+			-webkit-filter: blur(5px);
 
 		&.on
 			box-shadow: 0px 0px 40px 10px #777
