--- a/bg.styl
+++ b/bg.styl
@@ -12,8 +12,9 @@
 		float:left
 
 		&.off
-			opacity: .6
-			-webkit-filter: blur(5px);
+			opacity: .2
+			// opacity: .6
+			// -webkit-filter: blur(5px);
 
 		&.on
 			box-shadow: 0px 0px 40px 10px #777
