--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ body {
   -webkit-perspective: 600px;
   padding: 0 10px;
   margin: 0;
+  margin-top: -30px;
 }
 
 .form-signin h2, .form-signin h3 {
