--- a/client/css/list.styl
+++ b/client/css/list.styl
@@ -1,9 +1,52 @@
-#list
+#list, #new-edit-word
 	width: 100%
 	height: 100%
-	background: #000
+	background: #444
 	color: #eee
 	position: absolute
 	z-index:2
 	top: -100%
 	transition: top 1s
+	overflow: auto
+
+	&.show
+		top: 0
+
+	.list-item
+		margin: 2px
+		border-radius: 3px
+		padding: 10px
+		background: #222
+		display: inline-block
+		cursor: pointer
+
+		&.disabled
+			background-color: rgba(200,0,0,.6)
+
+	.form-search
+		margin: 10px 0
+
+		.search-box
+			margin: auto
+			width: 252px
+			position: relative
+			display: block
+
+#new-edit-word
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(50,50,50,1)), color-stop(100%,rgba(0,0,0,1)))
+
+	&.edit
+		.add-button
+			display: none
+
+		.edit-button
+			display: inline-block
+	
+	form
+		margin-top: 10px
+
+		.control-group
+			margin-bottom: 10px
+
+		.edit-button
+			display: none
